--- a/generic-app/Chart.yaml
+++ b/generic-app/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v1
 description: Helm chart for deployment generic app at Kubernetes
-icon: https://github.com/bgcorreia/generic-app/raw/master/icon.png
+icon: https://raw.githubusercontent.com/bgcorreia/helm/master/generic-app/icon.png
 maintainers:
 - email: brunogomescorreia@gmail.com
   name: Bruno Correia
